[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/spr_supports.png" type="Texture" id=1]
[ext_resource path="res://Sprites/spr_floor.png" type="Texture" id=2]
[ext_resource path="res://GameWorld/Placeable/Floor.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 64 )

[node name="Floor" type="Sprite"]
scale = Vector2( 0.031, 0.031 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Floor" type="StaticBody2D" parent="."]

[node name="Floor" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 1040 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 256, 2048 )

[node name="BuildingSnapDetectors" type="Node2D" parent="."]

[node name="LeftFloorSnap" type="Area2D" parent="BuildingSnapDetectors"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BuildingSnapDetectors/LeftFloorSnap"]
position = Vector2( -128, 0 )
shape = SubResource( 2 )

[node name="RightFloorSnap" type="Area2D" parent="BuildingSnapDetectors"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildingSnapDetectors/RightFloorSnap"]
position = Vector2( 128, 0 )
shape = SubResource( 2 )
